--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,29 @@
-.DS_Store
-node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.log
+*.orig
+*.rej
+*.swo
+*.swp
+*.vi
+*.zip
+*~
 
-# Editor directories and files
+# OS or Editor folders
+._*
+.cache
+.DS_Store
 .idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+.project
+.settings
+.tmproj
+*.esproj
+*.sublime-project
+*.sublime-workspace
+nbproject
+Thumbs.db
+
+# Folders to ignore
+dist
+node_modules
